Added: Record with root permission